fix: spacing

--- a/src/components/devfest-triangulo-2023/schedule-section/Schedule.module.css
+++ b/src/components/devfest-triangulo-2023/schedule-section/Schedule.module.css
@@ -1,5 +1,7 @@
 .schedule_grid {
-    gap: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .time_row {
@@ -31,9 +33,7 @@
 }
 
 .card_container {
-    display: grid;
     flex: 1;
-    padding: 0 0.5rem;
 }
 
 .card_content {
@@ -45,7 +45,6 @@
     font-family: NAMU-Pro, sans-serif;
     height: 100%;
     justify-content: space-between;
-    margin-top: 1rem;
     min-height: 80px;
     min-width: 20rem;
     padding: 1rem;
@@ -111,7 +110,7 @@
 .card_header {
     align-items: flex-start;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 0.75rem;
     justify-content: space-between;
 }
